# iauv_demo

./: .gitignore  LICENSE  README.md
clustering_stuff/: CMakeLists.txt  package.xml
clustering_stuff/scripts/: object_sensing_ACE.py
doc/: manifest.yaml
doc/html/: graph_legend.html  index-msg.html  index.html
doc/html/msg/: PlannerParam.html
doc/html/srv/: GetPath.html
docking_station/: CMakeLists.txt  package.xml  readme.md
docking_station/action/: Docking.action
docking_station/scenarios/: docking_structure.scn
docking_station/src/: multidocking_node.py
docking_station/src/utils/: dock_undock_action.py  ds_control.py
dual_gironas/: CMakeLists.txt  package.xml  readme.md
dual_gironas/launch/: dual_robotAndDS.launch  single_robot.launch  singlebot.launch  surveyor_interventor_ds.launch
dual_gironas/launch/core/: girona1000_base.launch
dual_gironas/rviz/: girona500_docking.rviz
dual_gironas/scenarios/: docking_structure.scn  multidocking_sim.scn  multiple_robots_scenario.scn  single_robot_scenario.scn  tf_check.txt  tf_static_check.txt
dual_gironas/scenarios/robot/: girona1000_bravo.scn  girona500.scn
dual_gironas/src/: multidocking_node.py
dual_gironas/src/utils/: dock_undock_action.py
iauv_description/: CMakeLists.txt  package.xml
iauv_description/config/: description.rviz  dual.rviz  testmap.bt  viz.rviz
iauv_description/config/ros_control/: bravo_ros_control.yaml  robotA_ros_control.yaml  robotB_ros_control.yaml
iauv_description/launch/: dual_robot.launch  simulation_startup.launch  single_robot.launch  singlebot.launch
iauv_description/launch/core/: girona1000_base.launch.core
iauv_description/launch/utils/: depth_cam.launch  robot_A_depth_cam.launch  robot_viz_only.launch  rqt_deck.launch
iauv_description/resources/creatures/BlueFish/: bluefish.glb  bluefish.gltf
iauv_description/scenarios/: multiple_robots_scenario.scn  objects.scn  peixos.scn  scenario.scn  single_robot_scenario.scn  structure.scn  structure_fix.scn  structure_new.scn
iauv_description/scenarios/robot/: girona1000.scn  girona1000_bravo.scn
iauv_description/scripts/: fold_arm.sh  stonefish_api.cpp
iauv_description/src/: odom_to_tf.py
iauv_description/urdf/: g1000_bravo.urdf.xacro
iauv_manipulation/: CMakeLists.txt  package.xml
iauv_manipulation/config/: arm_controller.perspective  motions.yaml  task_priority.yaml
iauv_manipulation/launch/: arm_motion_service.launch  rqt_deck.launch  task_priority.launch
iauv_manipulation/scripts/: arm_motion_srv.cpp  video_sequence.py
iauv_motion_planner/: CMakeLists.txt  package.xml  rosdoc.yaml
iauv_motion_planner/config/rviz/: viz.rviz
iauv_motion_planner/doc/: manifest.yaml
iauv_motion_planner/doc/html/: CircularPlanner_8cpp.html  CircularPlanner_8cpp__incl.map  CircularPlanner_8cpp__incl.md5  CircularPlanner_8cpp_source.html  CircularPlanner_8h.html  CircularPlanner_8h__dep__incl.map  CircularPlanner_8h__dep__incl.md5  CircularPlanner_8h__incl.map  CircularPlanner_8h__incl.md5  CircularPlanner_8h_source.html  Planner_8cpp.html  Planner_8cpp__incl.map  Planner_8cpp__incl.md5  Planner_8cpp_source.html  Planner_8h.html  Planner_8h__dep__incl.map  Planner_8h__dep__incl.md5  Planner_8h__incl.map  Planner_8h__incl.md5  Planner_8h_source.html  ScanPlanner_8cpp.html  ScanPlanner_8cpp__incl.map  ScanPlanner_8cpp__incl.md5  ScanPlanner_8cpp_source.html  ScanPlanner_8h.html  ScanPlanner_8h__dep__incl.map  ScanPlanner_8h__dep__incl.md5  ScanPlanner_8h__incl.map  ScanPlanner_8h__incl.md5  ScanPlanner_8h_source.html  Scene_8cpp.html  Scene_8cpp__incl.map  Scene_8cpp__incl.md5  Scene_8cpp_source.html  Scene_8h.html  Scene_8h__dep__incl.map  Scene_8h__dep__incl.md5  Scene_8h__incl.map  Scene_8h__incl.md5  Scene_8h_source.html  (+86 more)
iauv_motion_planner/doc/html/msg/: PlannerParam.html
iauv_motion_planner/doc/html/srv/: GetPath.html
iauv_motion_planner/include/iauv_motion_planner/: CircularPlanner.h  Planner.h  ScanPlanner.h  Scene.h  SimplePlanner.h  classForwards.h
iauv_motion_planner/include/iauv_motion_planner/sbmp/: RRTPlanner.h  SampleBasedPlanner.h  Validator3.h
iauv_motion_planner/launch/: dual_planner_node.launch  planner_node.launch
iauv_motion_planner/scripts/: follow_path.py  iauv_motion_planner_node.cpp  plan_test.py  request_path.py
iauv_motion_planner/src/: CircularPlanner.cpp  Planner.cpp  ScanPlanner.cpp  Scene.cpp  SimplePlanner.cpp
iauv_motion_planner/src/sbmp/: RRTPlanner.cpp  SampleBasedPlanner.cpp  Validator3.cpp
iauv_motion_planner/srv/: GetPath.srv
iauv_path_controller/: CMakeLists.txt  package.xml
rviz_cloud_annotation/doc/: manifest.yaml
rviz_cloud_annotation/doc/html/: graph_legend.html  index-msg.html  index.html
rviz_cloud_annotation/doc/html/msg/: LabeledPointCloud2.html  LabeledPointCloud2Array.html  RectangleSelectionViewport.html  UndoRedoState.html
rviz_cloud_annotation/rviz_cloud_annotation/: CMakeLists.txt
rviz_cloud_annotation/rviz_cloud_annotation/msg/: LabeledPointCloud2.msg  LabeledPointCloud2Array.msg
rviz_cloud_annotation/rviz_cloud_annotation/rviz/: annotation.rviz
rviz_cloud_annotation/rviz_cloud_annotation/src/: rviz_cloud_annotation_class.cpp  rviz_cloud_annotation_class.h  rviz_cloud_annotation_points.h
