<?xml version="1.0"?>
<package format="2">
	<name>dual_gironas</name>
	<version>1.0.0</version>
	<description>
		dual_gironas.
	</description>
	<author email="alaaelchaarani@gmail.com">Alaa Chaarani</author>
	<maintainer email="alaaelchaarani@gmail.com">Alaa Chaarani</maintainer>
	<license>BSD</license>
	<buildtool_depend>catkin</buildtool_depend>
	<buildtool_depend>message_generation</buildtool_depend>
	<exec_depend>message_runtime</exec_depend>
	<depend>roscpp</depend>
	<depend>rospy</depend>
	<depend>cola2_nav</depend>
	<build_depend>actionlib_msgs</build_depend>
	<exec_depend>actionlib_msgs</exec_depend>
	<depend>stonefish_ros</depend>
	<depend>opencv</depend>
</package>
