<?xml version="1.0"?>
<package format="2">
  <name>iauv_motion_planner</name>
  <version>0.0.0</version>
  <description>The iauv_motion_planner package</description>

  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="srealper@todo.todo">srealper</maintainer>
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>
  <!-- <url type="website">http://wiki.ros.org/hrov_martech2023</url> -->
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>tf</depend>
  <depend>tf2_ros</depend>

  <depend>eigen</depend>
  <depend>sensor_msgs</depend>
  <depend>pluginlib</depend>

  <depend>visualization_msgs</depend>
  <depend>rviz_visual_tools</depend>

  <depend>eigen_conversions</depend>
  <depend>geometry_msgs</depend>

  <depend>nav_msgs</depend>
  <depend>girona_utils</depend>

  <!-- TODO: double check these -->
  <exec_depend>joint_trajectory_controller</exec_depend>
  <exec_depend>fcl</exec_depend>
  <exec_depend>velocity_controllers</exec_depend>
  <exec_depend>joint_state_controller</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>octomap_server</exec_depend>
  <exec_depend>depth_image_proc</exec_depend>
  <exec_depend>octomap_rviz_plugins</exec_depend>
  <!-- end TODO -->

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>